--- a/src/App.css
+++ b/src/App.css
@@ -83,3 +83,28 @@
 }
 
 /* ----------------------------------Footer----------------------------------- */
+
+
+/* ________________________________Brownpaper-Page_______________________________ */
+#brownpaper-page #hero-section h1{
+  font-family:Georgia, 'Times New Roman', Times, serif;
+  color: white;
+}
+#brownpaper-maincontent br{
+  margin-top: -20px;
+}
+
+/* ------------------------------Exact-understanding--------------------- */
+#exact-understanding{
+  background: #222326;
+}
+
+/* -----------------------------brown-video--------------- */
+#brown-video {
+
+  background-image: url("./assets/Hero-Bg-mb.webp");  /* Path to your image */
+  background-size: cover; /* Ensure the image covers the whole section */
+  background-position: center; /* Center the background image */
+  background-repeat: no-repeat; /* Prevent the image from repeating */ /* Minimum height of the section to ensure image visibility */
+  width: 100%;
+}
